# templateRepoCpp

./: CMakeLists.txt  README.md  google_cpp_stytle.md
include/: hello.h  namespace.h
src/: CMakeLists.txt  hello.cpp  main.cpp
test/: CMakeLists.txt  test1.cpp  test2.cpp
